deployments/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: staging
spec:
  replicas: 10
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: my-app-container
          image: harbor.korporate.org/myapp/my-app-image:main-7e7de0a3d8838512eb5668b8798eb3c7cbefbbb9
          imagePullPolicy: Always
          ports:
            - containerPort: 80
