deployments/service-external.yml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-external
  namespace: staging-myapp
  labels:
    traefik-discover: "true"
spec:
  type: ExternalName
  externalName: "10.0.50.110"
  ports:
    - name: http
      port: 80
      protocol: TCP
