deployments/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: staging-myapp
  labels:
    traefik-discover: "public"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.50.110
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: myapp
