deployments/ingressroute.yml

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: myapp
  namespace: staging
  labels:
    app: myapp
    traefik-discover: 'public'
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`myapp.korporate.org`)
      kind: Rule
      services:
        - name: myapp-external
          port: 80
  tls:
    certResolver: default
